--- a/cplus.html
+++ b/cplus.html
@@ -140,7 +140,7 @@
 							</a>
 						</div>
 						<div class="pop-ex">
-							<a href="cplus_prog/18calc.html">
+							<a href="cplus_prog/66calcFun2.html">
 								<div>
 									<p class="div-head">C++ Examples</p><br>
 									<p class="c-para">C++ Program to build a Simple Calculator</p>
@@ -367,22 +367,22 @@
 
 						<li><a href="cplus_prog/65sumFun1.html"><div class="number">65</div><span>WAP for sum of two numbers using function.</span></a></li>
 						<li><a href="cplus_prog/66calcFun2.html"><div class="number">66</div><span>WAP to build a calculator using functions.</span></a></li>
-						<li><a href="#"><div class="number">67</div><span>WAP to find the largest element in a given array using function.</span></a></li>
-						<li><a href="#"><div class="number">68</div><span>WAP to find the factorial of a number using function.</span></a></li>
-						<li><a href="#"><div class="number">69</div><span>WAP to print Fibonacci series using function.</span></a></li>
-						<li><a href="#"><div class="number">70</div><span>WAP to check whether a year is a leap year or not using function.</span></a></li>
-						<li><a href="#"><div class="number">71</div><span>WAP to find simple interest (float as return type).</span></a></li>
-						<li><a href="#"><div class="number">72</div><span>WAP to swap values of two number using function(Call by value).</span></a></li>
-						<li><a href="#"><div class="number">73</div><span>WAP to swap values of two number using function(Call by reference).</span></a></li>
-						<li><a href="#"><div class="number">74</div><span>WAP to swap values of two number using function(Call by address).</span></a></li>
-						<li><a href="#"><div class="number">75</div><span>WAP to access the value of variable through a pointer.</span></a></li>
-						<li><a href="#"><div class="number">76</div><span>WAP to find sum of first N natural number using recursion.</span></a></li>
-						<li><a href="#"><div class="number">77</div><span>WAP to print Fibonacci series using recursion.</span></a></li>
-						<li><a href="#"><div class="number">78</div><span>WAP to find the factorial of number using recursion.</span></a></li>
+						<li><a href="cplus_prog/67largestFun3.html"><div class="number">67</div><span>WAP to find the largest element in a given array using function.</span></a></li>
+						<li><a href="cplus_prog/68factorialFun4.html"><div class="number">68</div><span>WAP to find the factorial of a number using function.</span></a></li>
+						<li><a href="cplus_prog/69fibFun5.html"><div class="number">69</div><span>WAP to print Fibonacci series using function.</span></a></li>
+						<li><a href="cplus_prog/70leapFun6.html"><div class="number">70</div><span>WAP to check whether a year is a leap year or not using function.</span></a></li>
+						<li><a href="cplus_prog/71siFun7.html"><div class="number">71</div><span>WAP to find simple interest (float as return type).</span></a></li>
+						<li><a href="cplus_prog/72valueSwap8.html"><div class="number">72</div><span>WAP to swap values of two number using function(Call by value).</span></a></li>
+						<li><a href="cplus_prog/73referenceSwap9.html"><div class="number">73</div><span>WAP to swap values of two number using function(Call by reference).</span></a></li>
+						<li><a href="cplus_prog/74addressSwap10.html"><div class="number">74</div><span>WAP to swap values of two number using function(Call by address).</span></a></li>
+						<li><a href="cplus_prog/75pointer11.html"><div class="number">75</div><span>WAP to access the value of variable through a pointer.</span></a></li>
+						<li><a href="cplus_prog/76sumRecursion12.html"><div class="number">76</div><span>WAP to find sum of first N natural number using recursion.</span></a></li>
+						<li><a href="cplus_prog/77fibRecurssion13.html"><div class="number">77</div><span>WAP to print Fibonacci series using recursion.</span></a></li>
+						<li><a href="cplus_prog/78factRecurssion14.html"><div class="number">78</div><span>WAP to find the factorial of number using recursion.</span></a></li>
 
-						<li><a href="#"><div class="number">79</div><span>WAP to display records of students using Structure.</span></a></li>
-						<li><a href="#"><div class="number">80</div><span>WAP to display records of students using the Union.</span></a></li>
-						<li><a href="#"><div class="number">81</div><span>WAP to display records of five students using Structure.</span></a></li>
+						<li><a href="cplus_prog/79studentStruc1.html"><div class="number">79</div><span>WAP to display records of students using Structure.</span></a></li>
+						<li><a href="cplus_prog/80studentUnion.html"><div class="number">80</div><span>WAP to display records of students using the Union.</span></a></li>
+						<li><a href="cplus_prog/81recordStructure3.html"><div class="number">81</div><span>WAP to display records of five students using Structure.</span></a></li>
 
 						<li><a href="#"><div class="number">82</div><span>WAP to demonstrate the use of classes and objects.</span></a></li>
 						<li><a href="#"><div class="number">83</div><span>WAP to add two numbers using member functions of a class and display the results.</span></a></li>
@@ -671,18 +671,18 @@
 					<ul class="Searching">
 						<li><a href="cplus_prog/65sumFun1.html"><div class="number">1</div><span>WAP for sum of two numbers using function.</span></a></li>
 						<li><a href="cplus_prog/66calcFun2.html"><div class="number">2</div><span>WAP to build a calculator using functions.</span></a></li>
-						<li><a href="#"><div class="number">3</div><span>WAP to find the largest element in a given array using function.</span></a></li>
-						<li><a href="#"><div class="number">4</div><span>WAP to find the factorial of a number using function.</span></a></li>
-						<li><a href="#"><div class="number">5</div><span>WAP to print Fibonacci series using function.</span></a></li>
-						<li><a href="#"><div class="number">6</div><span>WAP to check whether a year is a leap year or not using function.</span></a></li>
-						<li><a href="#"><div class="number">7</div><span>WAP to find simple interest (float as return type).</span></a></li>
-						<li><a href="#"><div class="number">8</div><span>WAP to swap values of two number using function(Call by value).</span></a></li>
-						<li><a href="#"><div class="number">9</div><span>WAP to swap values of two number using function(Call by reference).</span></a></li>
-						<li><a href="#"><div class="number">10</div><span>WAP to swap values of two number using function(Call by address).</span></a></li>
-						<li><a href="#"><div class="number">11</div><span>WAP to access the value of variable through a pointer.</span></a></li>
-						<li><a href="#"><div class="number">12</div><span>WAP to find sum of first N natural number using recursion.</span></a></li>
-						<li><a href="#"><div class="number">13</div><span>WAP to print Fibonacci series using recursion.</span></a></li>
-						<li><a href="#"><div class="number">14</div><span>WAP to find the factorial of number using recursion.</span></a></li>
+						<li><a href="cplus_prog/67largestFun3.html"><div class="number">3</div><span>WAP to find the largest element in a given array using function.</span></a></li>
+						<li><a href="cplus_prog/68factorialFun4.html"><div class="number">4</div><span>WAP to find the factorial of a number using function.</span></a></li>
+						<li><a href="cplus_prog/69fibFun5.html"><div class="number">5</div><span>WAP to print Fibonacci series using function.</span></a></li>
+						<li><a href="cplus_prog/70leapFun6.html"><div class="number">6</div><span>WAP to check whether a year is a leap year or not using function.</span></a></li>
+						<li><a href="cplus_prog/71siFun7.html"><div class="number">7</div><span>WAP to find simple interest (float as return type).</span></a></li>
+						<li><a href="cplus_prog/72valueSwap8.html"><div class="number">8</div><span>WAP to swap values of two number using function(Call by value).</span></a></li>
+						<li><a href="cplus_prog/73referenceSwap9.html"><div class="number">9</div><span>WAP to swap values of two number using function(Call by reference).</span></a></li>
+						<li><a href="cplus_prog/74addressSwap10.html"><div class="number">10</div><span>WAP to swap values of two number using function(Call by address).</span></a></li>
+						<li><a href="cplus_prog/75pointer11.html"><div class="number">11</div><span>WAP to access the value of variable through a pointer.</span></a></li>
+						<li><a href="cplus_prog/76sumRecursion12.html"><div class="number">12</div><span>WAP to find sum of first N natural number using recursion.</span></a></li>
+						<li><a href="cplus_prog/77fibRecurssion13.html"><div class="number">13</div><span>WAP to print Fibonacci series using recursion.</span></a></li>
+						<li><a href="cplus_prog/78factRecurssion14.html"><div class="number">14</div><span>WAP to find the factorial of number using recursion.</span></a></li>
 					</ul>
 				</div>
 
@@ -691,9 +691,9 @@
 						<p>The key difference between structure and union lies in their memory allocation. While structures allocate individual memory space for each member, unions share the same memory space for all members, resulting in a size determined by the largest member.</p>
 					</div>
 					<ul class="Searching">
-						<li><a href="#"><div class="number">1</div><span>WAP to display records of students using Structure.</span></a></li>
-						<li><a href="#"><div class="number">2</div><span>WAP to display records of students using the Union.</span></a></li>
-						<li><a href="#"><div class="number">3</div><span>WAP to display records of five students using Structure.</span></a></li>
+						<li><a href="cplus_prog/79studentStruc1.html"><div class="number">1</div><span>WAP to display records of students using Structure.</span></a></li>
+						<li><a href="cplus_prog/80studentUnion.html"><div class="number">2</div><span>WAP to display records of students using the Union.</span></a></li>
+						<li><a href="cplus_prog/81recordStructure3.html"><div class="number">3</div><span>WAP to display records of five students using Structure.</span></a></li>
 					</ul>
 				</div>
 				<div class="class-obj hide small-txt">
