--- a/cplus.html
+++ b/cplus.html
@@ -384,23 +384,23 @@
 						<li><a href="cplus_prog/80studentUnion.html"><div class="number">80</div><span>WAP to display records of students using the Union.</span></a></li>
 						<li><a href="cplus_prog/81recordStructure3.html"><div class="number">81</div><span>WAP to display records of five students using Structure.</span></a></li>
 
-						<li><a href="#"><div class="number">82</div><span>WAP to demonstrate the use of classes and objects.</span></a></li>
-						<li><a href="#"><div class="number">83</div><span>WAP to add two numbers using member functions of a class and display the results.</span></a></li>
-						<li><a href="#"><div class="number">84</div><span>WAP to demonstrate the use of scope resolution operators.</span></a></li>
+						<li><a href="cplus_prog/82classObj1.html"><div class="number">82</div><span>WAP to demonstrate the use of classes and objects.</span></a></li>
+						<li><a href="cplus_prog/83addClassObj2.html"><div class="number">83</div><span>WAP to add two numbers using member functions of a class and display the results.</span></a></li>
+						<li><a href="cplus_prog/84scopeResolution.html"><div class="number">84</div><span>WAP to demonstrate the use of scope resolution operators.</span></a></li>
 
-						<li><a href="#"><div class="number">85</div><span>WAP to display the concept of constructor & destructor.</span></a></li>
-						<li><a href="#"><div class="number">86</div><span>WAP to Constructor overloading.</span></a></li>
+						<li><a href="cplus_prog/85consDes1.html"><div class="number">85</div><span>WAP to display the concept of constructor & destructor.</span></a></li>
+						<li><a href="cplus_prog/86consOverloading2.html"><div class="number">86</div><span>WAP to Constructor overloading.</span></a></li>
 
-						<li><a href="#"><div class="number">87</div><span>WAP to demonstrate the single inheritance.</span></a></li>
-						<li><a href="#"><div class="number">88</div><span>WAP to demonstrate the multilevel inheritance.</span></a></li>
-						<li><a href="#"><div class="number">89</div><span>WAP to demonstrate the multiple inheritance.</span></a></li>
-						<li><a href="#"><div class="number">90</div><span>WAP to demonstrate the hierarchical inheritance.</span></a></li>
-						<li><a href="#"><div class="number">91</div><span>WAP to demonstrate the hybrid inheritance.</span></a></li>
+						<li><a href="cplus_prog/87singleInherit1.html"><div class="number">87</div><span>WAP to demonstrate the single inheritance.</span></a></li>
+						<li><a href="cplus_prog/88multilevel2.html"><div class="number">88</div><span>WAP to demonstrate the multilevel inheritance.</span></a></li>
+						<li><a href="cplus_prog/89multiple3.html"><div class="number">89</div><span>WAP to demonstrate the multiple inheritance.</span></a></li>
+						<li><a href="cplus_prog/90hierarchical4.html"><div class="number">90</div><span>WAP to demonstrate the hierarchical inheritance.</span></a></li>
+						<li><a href="cplus_prog/91hybrid5.html"><div class="number">91</div><span>WAP to demonstrate the hybrid inheritance.</span></a></li>
 
-						<li><a href="#"><div class="number">92</div><span>WAP to demonstrate the use of friend function.</span></a></li>
+						<li><a href=""><div class="number">92</div><span>WAP to demonstrate the use of friend function.</span></a></li>
 						<li><a href="#"><div class="number">93</div><span>WAP to demonstrate the use of operator overloading using friend function.</span></a></li>
 
-						<li><a href="#"><div class="number">94</div><span>WAP to demonstrate the use of function overloading.</span></a></li>
+						<li><a href="cplus_prog/94funOverloading1.html"><div class="number">94</div><span>WAP to demonstrate the use of function overloading.</span></a></li>
 						<li><a href="#"><div class="number">95</div><span>WAP to demonstrate the use of function overriding.</span></a></li>
 						<li><a href="#"><div class="number">96</div><span>WAP to demonstrate the use of unary operator overloading.</span></a></li>
 						<li><a href="#"><div class="number">97</div><span>WAP to demonstrate the use of binary operator overloading.</span></a></li>
@@ -698,9 +698,9 @@
 				</div>
 				<div class="class-obj hide small-txt">
 					<ul class="Searching">
-						<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the use of classes and objects.</span></a></li>
-						<li><a href="#"><div class="number">2</div><span>WAP to add two numbers using member functions of a class and display the results.</span></a></li>
-						<li><a href="#"><div class="number">3</div><span>WAP to demonstrate the use of scope resolution operators.</span></a></li>
+						<li><a href="cplus_prog/82classObj1.html"><div class="number">1</div><span>WAP to demonstrate the use of classes and objects.</span></a></li>
+						<li><a href="cplus_prog/83addClassObj2.html"><div class="number">2</div><span>WAP to add two numbers using member functions of a class and display the results.</span></a></li>
+						<li><a href="cplus_prog/84scopeResolution.html"><div class="number">3</div><span>WAP to demonstrate the use of scope resolution operators.</span></a></li>
 					</ul>
 				</div>
 				<div class="cons-dest hide small-txt">
@@ -709,8 +709,8 @@
 					<p>A destructor is a special member function of a class that is executed whenever an object of it's class goes out of scope.</p>
 					</div>
 					<ul class="Searching">
-						<li><a href="#"><div class="number">1</div><span>WAP to display the concept of constructor & destructor.</span></a></li>
-						<li><a href="#"><div class="number">2</div><span>WAP to Constructor overloading.</span></a></li>
+						<li><a href="cplus_prog/85consDes1.html"><div class="number">1</div><span>WAP to display the concept of constructor & destructor.</span></a></li>
+						<li><a href="cplus_prog/86consOverloading2.html"><div class="number">2</div><span>WAP to Constructor overloading.</span></a></li>
 					</ul>
 				</div>
 
@@ -727,11 +727,11 @@
 
 					</div>
 					<ul class="Searching">
-						<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the single inheritance.</span></a></li>
-						<li><a href="#"><div class="number">2</div><span>WAP to demonstrate the multilevel inheritance.</span></a></li>
-						<li><a href="#"><div class="number">3</div><span>WAP to demonstrate the multiple inheritance.</span></a></li>
-						<li><a href="#"><div class="number">4</div><span>WAP to demonstrate the hierarchical inheritance.</span></a></li>
-						<li><a href="#"><div class="number">5</div><span>WAP to demonstrate the hybrid inheritance.</span></a></li>
+						<li><a href="cplus_prog/87singleInherit1.html"><div class="number">1</div><span>WAP to demonstrate the single inheritance.</span></a></li>
+						<li><a href="cplus_prog/88multilevel2.html"><div class="number">2</div><span>WAP to demonstrate the multilevel inheritance.</span></a></li>
+						<li><a href="cplus_prog/89multiple3.html"><div class="number">3</div><span>WAP to demonstrate the multiple inheritance.</span></a></li>
+						<li><a href="cplus_prog/90hierarchical4.html"><div class="number">4</div><span>WAP to demonstrate the hierarchical inheritance.</span></a></li>
+						<li><a href="cplus_prog/91hybrid5.html"><div class="number">5</div><span>WAP to demonstrate the hybrid inheritance.</span></a></li>
 					</ul>
 				</div>
 
@@ -760,7 +760,7 @@
 						<p>A virtual function is a member function that is declared in the base class using the keyword virtual and is re-defined (Overridden) in the derived class.</p>
 					</div>
 					<ul class="Searching">
-						<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the use of function overloading.</span></a></li>
+						<li><a href="cplus_prog/94funOverloading1.html"><div class="number">1</div><span>WAP to demonstrate the use of function overloading.</span></a></li>
 						<li><a href="#"><div class="number">2</div><span>WAP to demonstrate the use of function overriding.</span></a></li>
 						<li><a href="#"><div class="number">3</div><span>WAP to demonstrate the use of unary operator overloading.</span></a></li>
 						<li><a href="#"><div class="number">4</div><span>WAP to demonstrate the use of binary operator overloading.</span></a></li>
