--- a/cplus.html
+++ b/cplus.html
@@ -401,7 +401,7 @@
 						<li><a href="#"><div class="number">93</div><span>WAP to demonstrate the use of operator overloading using friend function.</span></a></li>
 
 						<li><a href="cplus_prog/94funOverloading1.html"><div class="number">94</div><span>WAP to demonstrate the use of function overloading.</span></a></li>
-						<li><a href="#"><div class="number">95</div><span>WAP to demonstrate the use of function overriding.</span></a></li>
+						<li><a href="cplus_prog/95funOverriding.html"><div class="number">95</div><span>WAP to demonstrate the use of function overriding.</span></a></li>
 						<li><a href="#"><div class="number">96</div><span>WAP to demonstrate the use of unary operator overloading.</span></a></li>
 						<li><a href="#"><div class="number">97</div><span>WAP to demonstrate the use of binary operator overloading.</span></a></li>
 						<li><a href="#"><div class="number">98</div><span>WAP to demonstrate the use of virtual functions.</span></a></li>
@@ -761,7 +761,7 @@
 					</div>
 					<ul class="Searching">
 						<li><a href="cplus_prog/94funOverloading1.html"><div class="number">1</div><span>WAP to demonstrate the use of function overloading.</span></a></li>
-						<li><a href="#"><div class="number">2</div><span>WAP to demonstrate the use of function overriding.</span></a></li>
+						<li><a href="cplus_prog/95funOverriding.html"><div class="number">2</div><span>WAP to demonstrate the use of function overriding.</span></a></li>
 						<li><a href="#"><div class="number">3</div><span>WAP to demonstrate the use of unary operator overloading.</span></a></li>
 						<li><a href="#"><div class="number">4</div><span>WAP to demonstrate the use of binary operator overloading.</span></a></li>
 						<li><a href="#"><div class="number">5</div><span>WAP to demonstrate the use of virtual functions.</span></a></li>
