--- a/cplus_prog/94funOverloading1.html
+++ b/cplus_prog/94funOverloading1.html
@@ -11,6 +11,7 @@
 	<h2>WAP to demonstrate the use of function overloading.</h2><br><br>
 		<div class="box">
 			<div class="right" style="margin-right: 10px;">
+				<p>The C++ <b>function overloading</b> feature is used to make the code easier to read. It is used to save the programmer from having to memorise different function names</p>
 				<p><b> 1)</b> Parameters should have a different type.</p>
 				<div class="head">Source Code</div>
 				<div class="input"><img src="code_img/94fun1Overloading_inp.PNG" class="img"></div>
