--- a/cplus.html
+++ b/cplus.html
@@ -397,16 +397,16 @@
 						<li><a href="cplus_prog/90hierarchical4.html"><div class="number">90</div><span>WAP to demonstrate the hierarchical inheritance.</span></a></li>
 						<li><a href="cplus_prog/91hybrid5.html"><div class="number">91</div><span>WAP to demonstrate the hybrid inheritance.</span></a></li>
 
-						<li><a href=""><div class="number">92</div><span>WAP to demonstrate the use of friend function.</span></a></li>
+						<li><a href="cplus_prog/92friendFun.html"><div class="number">92</div><span>WAP to demonstrate the use of friend function.</span></a></li>
 						<li><a href="#"><div class="number">93</div><span>WAP to demonstrate the use of operator overloading using friend function.</span></a></li>
 
 						<li><a href="cplus_prog/94funOverloading1.html"><div class="number">94</div><span>WAP to demonstrate the use of function overloading.</span></a></li>
 						<li><a href="cplus_prog/95funOverriding.html"><div class="number">95</div><span>WAP to demonstrate the use of function overriding.</span></a></li>
-						<li><a href="#"><div class="number">96</div><span>WAP to demonstrate the use of unary operator overloading.</span></a></li>
-						<li><a href="#"><div class="number">97</div><span>WAP to demonstrate the use of binary operator overloading.</span></a></li>
-						<li><a href="#"><div class="number">98</div><span>WAP to demonstrate the use of virtual functions.</span></a></li>
+						<li><a href="cplus_prog/96unaryOverloading3.html"><div class="number">96</div><span>WAP to demonstrate the use of unary operator overloading.</span></a></li>
+						<li><a href="cplus_prog/97binary1Overloading.html"><div class="number">97</div><span>WAP to demonstrate the use of binary operator overloading.</span></a></li>
+						<li><a href="cplus_prog/98virtualFun5.html"><div class="number">98</div><span>WAP to demonstrate the use of virtual functions.</span></a></li>
 
-						<li><a href="#"><div class="number">99</div><span>WAP to demonstrate the use of Stack.</span></a></li>
+						<li><a href="cplus_prog/99stack.html"><div class="number">99</div><span>WAP to demonstrate the use of Stack.</span></a></li>
 						<li><a href="#"><div class="number">100</div><span>WAP to demonstrate the use of Queue.</span></a></li>
 						<li><a href="#"><div class="number">101</div><span>WAP to demonstrate the use of Linked List.</span></a></li>
 					</ul>
@@ -762,14 +762,14 @@
 					<ul class="Searching">
 						<li><a href="cplus_prog/94funOverloading1.html"><div class="number">1</div><span>WAP to demonstrate the use of function overloading.</span></a></li>
 						<li><a href="cplus_prog/95funOverriding.html"><div class="number">2</div><span>WAP to demonstrate the use of function overriding.</span></a></li>
-						<li><a href="#"><div class="number">3</div><span>WAP to demonstrate the use of unary operator overloading.</span></a></li>
-						<li><a href="#"><div class="number">4</div><span>WAP to demonstrate the use of binary operator overloading.</span></a></li>
-						<li><a href="#"><div class="number">5</div><span>WAP to demonstrate the use of virtual functions.</span></a></li>
+						<li><a href="cplus_prog/96unaryOverloading3.html"><div class="number">3</div><span>WAP to demonstrate the use of unary operator overloading.</span></a></li>
+						<li><a href="cplus_prog/97binary1Overloading.html"><div class="number">4</div><span>WAP to demonstrate the use of binary operator overloading.</span></a></li>
+						<li><a href="cplus_prog/98virtualFun5.html"><div class="number">5</div><span>WAP to demonstrate the use of virtual functions.</span></a></li>
 					</ul>
 				</div>
 				<div class="stack hide small-txt">
 					<ul class="Searching">
-						<li><a href="#"><div class="number">1</div><span>WAP to demonstrate the use of Stack.</span></a></li>
+						<li><a href="cplus_prog/99stack.html"><div class="number">1</div><span>WAP to demonstrate the use of Stack.</span></a></li>
 					</ul>
 				</div>
 
